--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 						<p>一个神奇的网站</p>
 						<nav>
 							<ul>
-								<li><a href="https://hao.7507.ga" class="iconfont brands icon-daohang"><span class="label">导航</span></a></li>
-								<li><a href="https://vip.7507.ga" class="iconfont brands icon-tv"><span class="label">解析</span></a></li>
-								<li><a href="https://list.oora.top" class="iconfont brands icon-lianluojilu"><span class="label">记录</span></a></li>
+								<li><a href="https://hao.7507.ga" class="iconfont brands icon-daohang" title="伍零柒导航"><span class="label">导航</span></a></li>
+								<li><a href="https://vip.7507.ga" class="iconfont brands icon-tv" title="伍零柒解析"><span class="label">解析</span></a></li>
+								<li><a href="https://list.oora.top" class="iconfont brands icon-lianluojilu" title="观影列表"><span class="label">记录</span></a></li>
 							</ul>
 						</nav>
 					</header>
