--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 							<ul>
 								<li><a href="https://hao.7507.ga" class="iconfont brands icon-daohang" title="伍零柒导航"><span class="label">导航</span></a></li>
 								<li><a href="https://vip.7507.ga" class="iconfont brands icon-tv" title="伍零柒解析"><span class="label">解析</span></a></li>
-								<li><a href="https://list.oora.top" class="iconfont brands icon-lianluojilu" title="观影列表"><span class="label">记录</span></a></li>
+								<li><a href="/speedtest" class="iconfont brands icon-cesu" title="测速"><span class="label">测速</span></a></li>
 							</ul>
 						</nav>
 					</header>
